# stis_lss_coronagraphy

./: .gitignore  README.md  find_star.py  klip_utils.py  misc.py  pyproject.toml
notebooks/: Example.ipynb
src/coronspec_tools/: find_star.py  inject_signal.py  interp_psf.py  matplotlibrc  misc.py  observing_sequence.py  sdi_tools.py  sdi_utils.py  utils.py
