[project]
name = "coronspec_tools"
description = "Tools for STIS coronagraphic spectroscopy"
readme = "README.md"
authors = [
  { name = "Jonathan Aguilar", email = "jaguilar@stsci.edu" },
]
keywords = ["astronomy", "python"]
classifiers = ["Programming Language :: Python"]
requires-python = ">=3.12"
dependencies = [
  "astropy",
  "bokeh",
  "matplotlib",
  "numpy",
  "pandas",
  "photutils",
  "pyklip",
  "pytest",
  "scikit-image",
  "scipy",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]  
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "stsci_rtd_theme",
]

[project.license]
text = "MIT License"

[build-system]
requires = ["setuptools >= 61.2",
            "setuptools_scm[toml]>=7.1"]
build-backend = 'setuptools.build_meta'